# py-st

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  deploy.sh  env.example  package-lock.json  pyproject.toml  requirements.txt  samconfig.toml  serverless.yml  simple_test_data.json  template.yaml  test_data.json
.github/workflows/: deploy.yml  test.yml
src/: app.py  main.py  requirements.txt
src/ocr/: __init__.py  receipt.py
src/routers/: __init__.py  receipt_api.py
