[project]
name = "receipt-ocr-api"
version = "0.1.0"
description = "レシートOCR API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "python-dotenv>=1.1.0",
    "pydantic-settings>=2.9.1",
    "pillow>=10.0.0",
    "mangum>=0.19.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "types-pillow>=10.0.0",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.fastapi]
app = "src.app:app"

[dependency-groups]
dev = [
    "fastapi[standard]>=0.115.12",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    # 全角文字が2文字としてカウントされてしまうためE501を無効化
    # https://github.com/astral-sh/ruff/issues/3825
    "E501",
]

[tool.mypy]
files = ["src"]
strict = true
ignore_missing_imports = true
